--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 								</form>
 								<ul class="icons">
 									<i  class="fa fa-github" style="font-size:36px"></i>
+									<a href="https://github.com/Waititu" class="btn">View on Github</a>
 								</ul>
 							</article>
 
