--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Learn more about <a href="#about">me</a></p>
 								<p></p>
 							</article>
@@ -61,7 +60,6 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p></p>
 								<p><a href="#contact">Reach me</a></p>
 							</article>
@@ -90,7 +88,7 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<i  class="fa fa-github" style="font-size:36px"></i>
+									<i  class="fa fa-github" style="font-size:36px"></i> <br/>
 									<a href="https://github.com/Waititu" class="btn">View on Github</a>
 								</ul>
 							</article>
