--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Check out my <a href ="images\Resume.pdf">resume</a> and <a href="#work">awesome work</a>.</p>
+								<p>Check out my <a href ="images\Resume.pdf">resume</a> and <a href="#work"> work</a>.</p>
 								<p></p>
 							</article>
 
@@ -63,14 +63,14 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								
-								<p></p>
-								<p><a href="#contact">Reach me</a></p>
+								<p>A passionate, determined, and detail oriented individual who very capable of handling many challenges; in fact, welcomes them!</p>
+								<p>Reach out to <a href="#contact">me!</a></p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form action="MAILTO:waitituisaac@gmail.com" method="post" enctype="text/plain">
+								<form action="#" method="post" enctype="text/plain">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
