--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<header id="header">
 						<div class="logo">
 							<span class=""></span>
-							<img src=”images\pixname.gif” alt=”animated” />
+							<img src="images\pixname.gif" alt=”animated” />
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -63,7 +63,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								
-								<p>A passionate, determined, and detail oriented individual who very capable of handling many challenges; in fact, welcomes them!</p>
+								<p>A passionate, determined, and detail oriented individual who is very capable of handling many challenges; in fact, welcomes them!</p>
 								<p>Reach out to <a href="#contact">me!</a></p>
 							</article>
 
